<resources>
    <string name="app_name" translatable="false">UWasting</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome to UWasting!</string>
    <string name="enter_email">Enter your email address.</string>
    <string name="email_using">It will be used for signing in to your account.</string>
    <string name="email" translatable="false">Email</string>
    <string name="next">Next</string>
    <string name="agreement">By pressing Next, you agree with the</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="come_up_with_pswrd">Come up with a strong password.</string>
    <string name="enter_password">Enter password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="verify_email">Please, verify your email address by following the link we sent.\n
                                Then you can sign in to your account.
    </string>
    <string name="add_error">Operation add error!</string>
    <string name="spending_by_category">Spending by Category</string>
    <string name="income_by_category">Income by Category</string>
    <string name="expense_category">Expense category</string>
    <string name="income_category">Income category</string>
    <string name="name_error">Failed to change name or surname</string>
    <string name="impossible_to_change_password">It\'s impossible to change password!</string>
    <string name="registration_error">Registration error.</string>
    <string name="user_not_found">User not found!</string>
    <string name="passwords_dont_match">Passwords don\'t match!</string>
    <string name="email_is_used">This email is already used by someone!</string>
    <string name="field_is_empty">You left some fields empty!</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="account">Account</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="add_income">Add an income</string>
    <string name="add_expense">Add an expense</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="categories">Categories</string>
    <string name="select_period">Select a period</string>
    <string name="month">Month</string>
    <string name="quarter">Quarter</string>
    <string name="half_year">Half a year</string>
    <string name="year">Year</string>
    <string name="financial_analysis">Financial analysis</string>
    <string name="monthly_forecast">Monthly forecast</string>
    <string name="operations">Operations</string>
    <string name="by_date">By date</string>
    <string name="by_sum">By sum</string>
    <string name="edit_operation">Edit operation</string>
    <string name="delete_operation">Delete operation</string>
    <string name="new_income">New income</string>
    <string name="new_expense">New expense</string>
    <string name="income_title">Title</string>
    <string name="expense_title">Title</string>
    <string name="sum">Sum</string>
    <string name="commission_date">Date of commission</string>
    <string name="category">Category</string>
    <string name="save_shanges">Save changes</string>
    <string name="new_pswrd">New password</string>
    <string name="current_email">Current email</string>
    <string name="new_email">New email</string>
    <string name="enter_your_pswrd">Enter your password to continue</string>
    <string name="add">Add</string>
    <string name="select_category">Select category</string>
    <string name="new_category">New category</string>
    <string name="confirm_selecting">Select category</string>
    <string name="category_name">Category name</string>
    <string name="balance">Balance adjusted for inflation: </string>
    <string name="make_as_base">Make base</string>
    <string name="last">Last</string>
    <string name="days">days</string>
</resources>